--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ version = "0.1.0"
 authors = ["Felipe Sere <felipesere@gmail.com>"]
 
 [dependencies]
+serde = "1.0"
 serde_json = "1.0"
+serde_derive = "1.0"
