--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ authors = ["Felipe Sere <felipesere@gmail.com>"]
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+tempfile = "3.0"
+symlink = "0.1.0"
