Try to install homebrew and some command line parameters

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 **/*.rs.bk
 cmake-build-debug
 CMakeLists.txt
+# General
+.vagrant/
+
+# Log files (if you are creating logs in debug mode, uncomment this)
+# *.logs
