--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ version = "0.1.0"
 authors = ["Felipe Sere <felipesere@gmail.com>"]
 
 [dependencies]
+clap = "2.32.0"
+maplit = "1.0.1"
+reqwest = "0.9.1"
 serde = "1.0"
-serde_json = "1.0"
 serde_derive = "1.0"
-tempfile = "3.0"
+serde_json = "1.0"
 symlink = "0.1.0"
+tempfile = "3.0"
