--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde_derive = "1.0"
 serde_json = "1.0"
 symlink = "0.1.0"
 tempfile = "3.0"
+failure = "0.1.2"
+failure_derive = "0.1.2"
 
 [profile.release]
 lto = true
