Track the version as the git sha

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = '2018'
 name = "dotter"
 version = "0.1.0"
 authors = ["Felipe Sere <felipesere@gmail.com>"]
+build = "build.rs"
+
+[build-dependencies]
+git-version = "0.2.1"
 
 [dependencies]
 clap = "2.32.0"
