--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ build = "build.rs"
 git-version = "0.2.1"
 
 [dependencies]
-clap = "2.32.0"
 maplit = "1.0.1"
 reqwest = "0.9.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 symlink = "0.1.0"
+structopt = "0.2"
 tempfile = "3.0"
 failure = "0.1.2"
 failure_derive = "0.1.2"
