--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,19 @@ version = "0.1.0"
 authors = ["Felipe Sere <felipesere@gmail.com>"]
 
 [dependencies]
+clap = "2.32.0"
+failure = "0.1.2"
+failure_derive = "0.1.2"
 maplit = "1.0.1"
 reqwest = "0.9.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 symlink = "0.1.0"
-structopt = "0.2"
 tempfile = "3.0"
-failure = "0.1.2"
-failure_derive = "0.1.2"
+
+[build-dependencies]
+git-version = "0.2.1"
 
 [profile.release]
 lto = true
